--- a/po/hu.po
+++ b/po/hu.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: homebank\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-08-07 11:54+0200\n"
-"PO-Revision-Date: 2015-01-02 20:07+0000\n"
-"Last-Translator: Peter Kovacs <pete123@freemail.hu>\n"
+"PO-Revision-Date: 2016-10-30 08:51+0000\n"
+"Last-Translator: dolon <Unknown>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-10-16 06:41+0000\n"
-"X-Generator: Launchpad (build 18232)\n"
+"X-Launchpad-Export-Date: 2016-11-06 07:52+0000\n"
+"X-Generator: Launchpad (build 18246)\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:876
 msgid "HomeBank"
@@ -23,7 +23,7 @@ msgstr "HomeBank"
 
 #: ../data/homebank.desktop.in.in.h:2
 msgid "Personal finance"
-msgstr ""
+msgstr "Személyes pénzügyek"
 
 #: ../data/homebank.desktop.in.in.h:3 ../src/dsp_mainwindow.c:449
 #: ../src/dsp_mainwindow.c:880
@@ -62,7 +62,7 @@ msgstr ""
 #: ../src/ui-hbfile.c:194 ../src/ui-payee.c:871 ../src/ui-payee.c:1032
 #: ../src/ui-pref.c:1962 ../src/ui-split.c:365 ../src/ui-transaction.c:1095
 msgid "_Cancel"
-msgstr "_Mégse"
+msgstr "_Cancel"
 
 #: ../src/dsp_account.c:340 ../src/ui-account.c:659
 #: ../src/ui-assist-import.c:941 ../src/ui-category.c:1306
@@ -75,7 +75,7 @@ msgstr "_OK"
 
 #: ../src/dsp_account.c:357
 msgid "Multiple edit transactions"
-msgstr ""
+msgstr "Többszörös tranzakció szerkesztés"
 
 #: ../src/dsp_account.c:372 ../src/ui-payee.c:921 ../src/ui-transaction.c:958
 msgid "Pa_yment:"
@@ -94,7 +94,7 @@ msgstr "_Partner:"
 #: ../src/ui-assign.c:869 ../src/ui-hbfile.c:279 ../src/ui-payee.c:913
 #: ../src/ui-transaction.c:1005
 msgid "_Category:"
-msgstr "_Kategória:"
+msgstr "_Category"
 
 #: ../src/dsp_account.c:434 ../src/ui-transaction.c:1030
 msgid "Ta_gs:"
@@ -110,14 +110,14 @@ msgstr ""
 
 #: ../src/dsp_account.c:629
 msgid "No inconsistency found !"
-msgstr ""
+msgstr "Nincs ütközés"
 
 #: ../src/dsp_account.c:639
 #, c-format
 msgid ""
 "Inconsistency were found: %d\n"
 "do you want to review and fix ?"
-msgstr ""
+msgstr "Ütközés a következővel: %d"
 
 #: ../src/dsp_account.c:696
 #, c-format
@@ -132,7 +132,7 @@ msgstr ""
 
 #: ../src/dsp_account.c:702
 msgid "_Convert"
-msgstr "_Konvertálás"
+msgstr "_Convert"
 
 #: ../src/dsp_account.c:731
 msgid "No transaction changed"
@@ -141,11 +141,11 @@ msgstr "Nincs megváltozott tranzakció"
 #: ../src/dsp_account.c:733
 #, c-format
 msgid "transaction changed: %d"
-msgstr ""
+msgstr "Megváltozott tranzakciók: %d"
 
 #: ../src/dsp_account.c:736
 msgid "Automatic assignment result"
-msgstr ""
+msgstr "Automatikus hozzárendelés eredménye"
 
 #: ../src/dsp_account.c:917
 msgid ""
@@ -178,7 +178,7 @@ msgstr ""
 
 #: ../src/dsp_account.c:1669
 msgid "Are you sure you want to toggle the status Reconciled?"
-msgstr "Biztos, hogy meg akarja változtani a státuszt Egyeztetettre?"
+msgstr "Biztos meg szeretné változtatni az állapotot Egyeztetettre?"
 
 #: ../src/dsp_account.c:1671
 msgid "_Toggle"
@@ -203,7 +203,7 @@ msgstr ""
 
 #: ../src/dsp_account.c:2158
 msgid "Transacti_on"
-msgstr "_Tétel"
+msgstr "Transacti_on"
 
 #: ../src/dsp_account.c:2159
 msgid "_Status"
@@ -211,7 +211,7 @@ msgstr ""
 
 #: ../src/dsp_account.c:2160 ../src/dsp_mainwindow.c:165
 msgid "_Tools"
-msgstr "_Eszközök"
+msgstr "_Tools"
 
 #: ../src/dsp_account.c:2162 ../src/dsp_mainwindow.c:180
 #: ../src/dsp_mainwindow.c:866 ../src/ui-account.c:1187
@@ -220,7 +220,7 @@ msgstr "_Eszközök"
 #: ../src/ui-payee.c:1222 ../src/ui-transaction.c:1104
 #: ../src/ui-transaction.c:1112
 msgid "_Close"
-msgstr "_Bezárás"
+msgstr "_Close"
 
 #: ../src/dsp_account.c:2162
 msgid "Close the current account"
@@ -229,19 +229,19 @@ msgstr "Jelenlegi számla lezárása"
 #. name, icon-name, label, accelerator, tooltip
 #: ../src/dsp_account.c:2165
 msgid "_Filter..."
-msgstr "_Szűrő..."
+msgstr "_Szűrők…"
 
 #: ../src/dsp_account.c:2165
 msgid "Open the list filter"
-msgstr "Szűrők listájának megnyitása"
+msgstr "Szűrőlista megnyitása"
 
 #: ../src/dsp_account.c:2166
 msgid "Convert to Euro..."
-msgstr ""
+msgstr "Euróra konvertálás"
 
 #: ../src/dsp_account.c:2166
 msgid "Convert this account to Euro currency"
-msgstr ""
+msgstr "Számla Euró alapúra váltása"
 
 #: ../src/dsp_account.c:2168
 msgid "_Add..."
@@ -249,15 +249,15 @@ msgstr "_Hozzáadás…"
 
 #: ../src/dsp_account.c:2168
 msgid "Add a new transaction"
-msgstr "Új tétel hozzáadása"
+msgstr "Új tranzakció hozzáadása"
 
 #: ../src/dsp_account.c:2169
 msgid "_Inherit..."
-msgstr "_Örököl"
+msgstr "_Örököl..."
 
 #: ../src/dsp_account.c:2169
 msgid "Inherit from the active transaction"
-msgstr "Örököltetés az aktív tételből"
+msgstr "Öröklés az aktív tételből"
 
 #: ../src/dsp_account.c:2170
 msgid "_Edit..."
@@ -265,15 +265,15 @@ msgstr "_Szerkesztés…"
 
 #: ../src/dsp_account.c:2170
 msgid "Edit the active transaction"
-msgstr "Az aktív tétel szerkesztése"
+msgstr "Aktív tranzakció szerkesztése"
 
 #: ../src/dsp_account.c:2172
 msgid "_None"
-msgstr ""
+msgstr "_Nincs"
 
 #: ../src/dsp_account.c:2172
 msgid "Toggle none for selected transaction(s)"
-msgstr ""
+msgstr "Kiválasztás változtatása a kijelölt tranzakcióknál"
 
 #: ../src/dsp_account.c:2173
 msgid "_Cleared"
@@ -281,7 +281,7 @@ msgstr "_Törölve"
 
 #: ../src/dsp_account.c:2173
 msgid "Toggle cleared for selected transaction(s)"
-msgstr ""
+msgstr "Kiválasztás törlése a kijelölt tranzakcióknál"
 
 #: ../src/dsp_account.c:2174
 msgid "_Reconciled"
@@ -289,15 +289,15 @@ msgstr "_Egyeztetett"
 
 #: ../src/dsp_account.c:2174
 msgid "Toggle reconciled for selected transaction(s)"
-msgstr ""
+msgstr "Kiválasztás változtatása a kijelölt tranzakcióknál"
 
 #: ../src/dsp_account.c:2176
 msgid "_Multiple Edit..."
-msgstr ""
+msgstr "_Többszörös szerkesztés..."
 
 #: ../src/dsp_account.c:2176
 msgid "Edit multiple transaction"
-msgstr ""
+msgstr "Több tranzakció szerkesztése"
 
 #: ../src/dsp_account.c:2177
 msgid "Create template..."
@@ -317,11 +317,11 @@ msgstr "Kijelölt tranzakció(k) törlése"
 
 #: ../src/dsp_account.c:2180
 msgid "Auto. assignments"
-msgstr ""
+msgstr "Hozzárendelések"
 
 #: ../src/dsp_account.c:2180
 msgid "Run automatic assignments"
-msgstr ""
+msgstr "Hozzárendelések futtatása"
 
 #: ../src/dsp_account.c:2181
 msgid "Export QIF..."
@@ -346,11 +346,11 @@ msgstr ""
 
 #: ../src/dsp_account.c:2317 ../src/dsp_mainwindow.c:2574
 msgid "Add"
-msgstr "Hozzáadás"
+msgstr "Hozzáad"
 
 #: ../src/dsp_account.c:2320
 msgid "Inherit"
-msgstr "Örököltetés"
+msgstr "Öröklés"
 
 #: ../src/dsp_account.c:2323
 msgid "Edit"
